--- a/res/values-fr/cm_strings.xml
+++ b/res/values-fr/cm_strings.xml
@@ -68,7 +68,7 @@
     <string name="notification_convert_sound_to_vibration_title">Vibrer à la notification</string>
     <string name="notification_convert_sound_to_vibration_summary">En mode vibreur, toutes les notifications vibrent indépendamment des paramètres individuels des applications</string>
     <string name="device_hostname">Nom d\'hôte de l\'appareil</string>
-    <string name="mod_version">Version CyanogenMod</string>
+    <string name="mod_version">Version Ganbarou</string>
     <string name="mod_version_default">Inconnue</string>
     <string name="build_date">Date de compilation</string>
     <string name="cpu_info">CPU</string>
@@ -192,7 +192,6 @@
     <string name="toggleFlashlight">Lampe</string>
     <string name="toggleLockScreen">Verrouillage</string>
     <string name="toggleWimax">WiMax</string>
-    <string name="toggleNfc">NFC</string>
     <string name="screen_security_category">Verrouillage de l\'écran</string>
     <string name="screen_security_title">Écran de verrouillage</string>
     <string name="screen_security_summary">Options de l\'écran de verrouillage : style, délais et options diverses</string>
