--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -17,6 +17,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/development_settings_title">
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
     <PreferenceScreen
             android:key="development_tools"
             android:title="@string/development_tools_title"
@@ -26,16 +27,19 @@
                 android:targetPackage="com.android.development"
                 android:targetClass="com.android.development.Development" />
     </PreferenceScreen>
+**** GANBAROU ADDITIONS END **** -->
 
     <com.android.settings.BugreportPreference
             android:key="bugreport"
             android:title="@*android:string/bugreport_title"
             android:dialogTitle="@*android:string/bugreport_title" />
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
     <CheckBoxPreference
         android:key="advanced_reboot"
         android:title="@string/advanced_reboot_title"
         android:summary="@string/advanced_reboot_summary" />
+**** GANBAROU ADDITIONS END **** -->
 
     <PreferenceScreen
             android:key="local_backup_password"
@@ -128,6 +132,7 @@
 
     </PreferenceCategory>
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
     <PreferenceCategory android:key="debug_input_category"
             android:title="@string/debug_input_category">
 
@@ -142,10 +147,12 @@
             android:summary="@string/pointer_location_summary"/>
 
     </PreferenceCategory>
+**** GANBAROU ADDITIONS END **** -->
 
     <PreferenceCategory android:key="debug_drawing_category"
             android:title="@string/debug_drawing_category">
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
         <CheckBoxPreference
             android:key="debug_layout"
             android:title="@string/debug_layout"
@@ -170,6 +177,7 @@
             android:key="show_screen_updates"
             android:title="@string/show_screen_updates"
             android:summary="@string/show_screen_updates_summary"/>
+**** GANBAROU ADDITIONS END **** -->
 
         <ListPreference
             android:key="window_animation_scale"
@@ -192,16 +200,19 @@
             android:entries="@array/animator_duration_scale_entries"
             android:entryValues="@array/animator_duration_scale_values" />
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
         <CheckBoxPreference
             android:key="disable_overlays"
             android:title="@string/disable_overlays"
             android:summary="@string/disable_overlays_summary"/>
+**** GANBAROU ADDITIONS END **** -->
 
         <CheckBoxPreference
             android:key="force_hw_ui"
             android:title="@string/force_hw_ui"
             android:summary="@string/force_hw_ui_summary"/>
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
         <CheckBoxPreference
             android:key="force_msaa"
             android:title="@string/force_msaa"
@@ -213,9 +224,11 @@
             android:persistent="false"
             android:entries="@array/overlay_display_devices_entries"
             android:entryValues="@array/overlay_display_devices_values" />
+**** GANBAROU ADDITIONS END **** -->
 
     </PreferenceCategory>
 
+<!-- **** GANBAROU ADDITIONS STARTS **** 
     <PreferenceCategory android:key="debug_monitoring_category"
             android:title="@string/debug_monitoring_category">
 
@@ -247,6 +260,7 @@
             android:dialogTitle="@string/enable_traces_dialog_title" />
 
     </PreferenceCategory>
+**** GANBAROU ADDITIONS END **** -->
 
     <PreferenceCategory android:key="debug_applications_category"
             android:title="@string/debug_applications_category">
