--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -52,6 +52,8 @@
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
     <!-- Lock clock -->
+<!-- **** GANBAROU ADDITIONS STARTS **** 
+     Lock Clock settings are double, in System Settings and Lockscreen Settings!
     <PreferenceScreen
         android:key="lock_clock"
         android:title="@string/lock_clock_title"
@@ -60,6 +62,7 @@
                 android:targetPackage="com.cyanogenmod.lockclock"
                 android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
     </PreferenceScreen>
+ **** GANBAROU ADDITIONS END **** -->
 
     <PreferenceScreen
         android:key="notification_pulse"
@@ -95,6 +98,17 @@
             android:fragment="com.android.settings.cyanogenmod.PieControl"
             android:title="@string/pie_control_title" />
 
-    </PreferenceCategory>
+<!-- **** GANBAROU ADDITIONS STARTS **** -->
+       <!-- Navigation bar position -->
+        <ListPreference
+            android:title="@string/nav_pos_dialog_title"
+            android:summary="@string/nav_pos_option_title"
+            android:key="nav_position"
+            android:entries="@array/nav_pos_values"
+            android:entryValues="@array/nav_pos_retval"
+            android:defaultValue="@string/nav_pos_default" />
+<!-- **** GANBAROU ADDITIONS END **** -->
+
+      </PreferenceCategory>
 
 </PreferenceScreen>
