Big Clean Up. Was necessary because ROM didn't compile anymore. Removed TabletUI functionality
Change-Id: I8b44753fb1170eb065bf2a8a6c585a22f22e488a

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -772,7 +772,7 @@
         <!-- Always allow app to send to premium SMS short code. -->
         <item>Always allow</item>
     </string-array>
-<!-- **** GANBAROU ADDITIONS STARTS **** -->
+<!-- **** GANBAROU_PATCH_START **** -->
     <!-- There is a setting to control the position of the navigation bar if tablet_ui is not active. -->
     <string-array name="nav_pos_values" translatable="false">
         <item>left</item>
@@ -784,5 +784,5 @@
         <item>center</item>
         <item>right</item>
     </string-array>
-<!-- **** GANBAROU ADDITIONS END **** -->
+<!-- **** GANBAROU_PATCH_END **** -->
 </resources>
