--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -41,7 +41,7 @@
         </PreferenceScreen>
 
         <!-- CyanogenMod Updates -->
-<!-- **** GANBAROU ADDITIONS STARTS ****
+<!-- **** GANBAROU_PATCH_START ****
         <PreferenceScreen android:key="cm_updates"
                 android:title="@string/cmupdate_settings_title" 
                 android:summary="@string/cmupdate_settings_summary">
@@ -49,25 +49,25 @@
                     android:targetPackage="com.cyanogenmod.updater"
                     android:targetClass="com.cyanogenmod.updater.UpdatesSettings" />
         </PreferenceScreen>
-**** GANBAROU ADDITIONS END **** -->
+**** GANBAROU_PATCH_END **** -->
 
         <!-- Anonymous statistics - (CMStats) -->
-<!-- **** GANBAROU ADDITIONS STARTS ****
+<!-- **** GANBAROU_PATCH_START ****
         <PreferenceScreen
             android:key="cmstats"
             android:title="@string/anonymous_statistics_title"
             android:summary="@string/anonymous_statistics_summary"
             android:fragment="com.android.settings.cmstats.AnonymousStats" >
         </PreferenceScreen>
-**** GANBAROU ADDITIONS END **** -->
+**** GANBAROU_PATCH_END **** -->
 
         <!-- Change Log -->
-<!-- **** GANBAROU ADDITIONS STARTS **** -->
+<!-- **** GANBAROU_PATCH_START **** -->
         <PreferenceScreen android:key="changelog"
             android:title="@string/changelog_title"
             android:fragment="com.android.settings.cyanogenmod.ChangeLog" >
         </PreferenceScreen>
-<!-- **** GANBAROU ADDITIONS END **** -->
+<!-- **** GANBAROU_PATCH_END **** -->
 
         <!-- Legal Information -->
         <PreferenceScreen
