--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -24,29 +24,29 @@
         android:title="@string/power_menu_reboot_title"
         android:defaultValue="true" />
 
-<!-- **** GANBAROU ADDITIONS STARTS **** -->
+<!-- **** GANBAROU_PATCH_START **** -->
     <CheckBoxPreference
         android:key="power_menu_screenshot"
         android:title="@string/power_menu_screenshot_title"
         android:defaultValue="true" />
-<!-- **** GANBAROU ADDITIONS END **** -->
 
     <CheckBoxPreference
         android:key="power_menu_expanded_desktop"
         android:title="@string/power_menu_expanded_desktop"
-        android:persistent="false" />
+        android:persistent="true" />
+<!-- **** GANBAROU_PATCH_END **** -->
 
     <CheckBoxPreference
         android:key="power_menu_profiles"
         android:title="@string/power_menu_profiles_title"
         android:defaultValue="false" />
 
-<!-- **** GANBAROU ADDITIONS STARTS **** -->
+<!-- **** GANBAROU_PATCH_START **** -->
     <CheckBoxPreference
         android:key="power_menu_airplane"
         android:title="@string/power_menu_airplane_title"
         android:defaultValue="false" />
-<!-- **** GANBAROU ADDITIONS END **** -->
+<!-- **** GANBAROU_PATCH_END **** -->
 
     <CheckBoxPreference
         android:key="power_menu_user"
