--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -52,8 +52,6 @@
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
     <!-- Lock clock -->
-<!-- **** GANBAROU ADDITIONS STARTS **** 
-     Lock Clock settings are double, in System Settings and Lockscreen Settings!
     <PreferenceScreen
         android:key="lock_clock"
         android:title="@string/lock_clock_title"
@@ -62,7 +60,6 @@
                 android:targetPackage="com.cyanogenmod.lockclock"
                 android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
     </PreferenceScreen>
- **** GANBAROU ADDITIONS END **** -->
 
     <PreferenceScreen
         android:key="notification_pulse"
@@ -98,7 +95,7 @@
             android:fragment="com.android.settings.cyanogenmod.PieControl"
             android:title="@string/pie_control_title" />
 
-<!-- **** GANBAROU ADDITIONS STARTS **** -->
+<!-- **** GANBAROU_PATCH_START **** -->
        <!-- Navigation bar position -->
         <ListPreference
             android:title="@string/nav_pos_dialog_title"
@@ -107,7 +104,7 @@
             android:entries="@array/nav_pos_values"
             android:entryValues="@array/nav_pos_retval"
             android:defaultValue="@string/nav_pos_default" />
-<!-- **** GANBAROU ADDITIONS END **** -->
+<!-- **** GANBAROU_PATCH_END **** -->
 
       </PreferenceCategory>
 
