Changed 'About phone' settings screen for Ganbarou ROM
Change-Id: Ifdb171ffebcce3a060da1e7c7dfc1e78dd43d2b3

--- a/res/values-af/cm_strings.xml
+++ b/res/values-af/cm_strings.xml
@@ -39,15 +39,15 @@
     <string name="notification_convert_sound_to_vibration_title">Vibreer op kennisgewing</string>
     <string name="notification_convert_sound_to_vibration_summary">In vibrasie-modus sal alle kennisgewings, ongeag van individuele program instellings, vibreer</string>
     <string name="device_hostname">Toestel gasheernaam</string>
-    <string name="mod_version">CyanogenMod weergawe</string>
+    <string name="mod_version">Ganbarou weergawe</string>
     <string name="mod_version_default">Onbekend</string>
     <string name="build_date">Bou datum</string>
     <string name="cpu_info">SVE</string>
     <string name="mem_info">Geheue</string>
-    <string name="anonymous_statistics_title">CyanogenMod statistieke</string>
-    <string name="anonymous_statistics_summary">Help CyanogenMod verbeter deur anonieme statistiek verslagdoening te keis</string>
+    <string name="anonymous_statistics_title">Ganbarou statistieke</string>
+    <string name="anonymous_statistics_summary">Help Ganbarou verbeter deur anonieme statistiek verslagdoening te keis</string>
     <string name="anonymous_statistics_warning_title">Inligting</string>
-    <string name="anonymous_statistics_warning">"Deur CyanogenMod statistieke toe te laat sal nie-persoonlike data ingestuur word na die ontwikkelaars van CyanogenMod installasies. Die inligting sluit in \'n unieke identifikasienommer in wat nie privaatheid of persoonlike data in gevaar stel nie. Die data word ingestuur tydens elke \'boot\'.\n\nVir \'n voorbeeld van die data wat ingestuur word, raak "<b>"Voorskou"</b>"</string>
+    <string name="anonymous_statistics_warning">"Deur Ganbarou statistieke toe te laat sal nie-persoonlike data ingestuur word na die ontwikkelaars van Ganbarou installasies. Die inligting sluit in \'n unieke identifikasienommer in wat nie privaatheid of persoonlike data in gevaar stel nie. Die data word ingestuur tydens elke \'boot\'.\n\nVir \'n voorbeeld van die data wat ingestuur word, raak "<b>"Voorskou"</b>"</string>
     <string name="enable_reporting_title">Aktiveer verslaggewing</string>
     <string name="preview_data_title">Voorskou</string>
     <string name="view_stats_title">Kyk na statistieke</string>
@@ -342,7 +342,7 @@
     <string name="power_menu_airplane_title">Vliegtuigmodus</string>
     <string name="power_menu_user_title">Gebruiker wisselaar</string>
     <string name="power_menu_sound_title">Klankpaneel</string>
-    <string name="cmupdate_settings_title">CyanogenMod opgradering</string>
+    <string name="cmupdate_settings_title">Ganbarou opgradering</string>
     <string name="cmupdate_settings_summary">Soek vir of installeer beskikbare opgraderings</string>
     <string name="advanced_settings_title">Gevorderd</string>
     <string name="ime_switcher_notify">Kies kennisgewings</string>
