--- a/res/values-es/cm_strings.xml
+++ b/res/values-es/cm_strings.xml
@@ -58,15 +58,15 @@
     <string name="notification_vibrate_during_calls_title">Vibrar durante llamadas</string>
     <string name="notification_vibrate_during_calls_summary">Las notificaciones entrantes vibrarán levemente durante una llamada</string>
     <string name="device_hostname">Nombre del dispositivo</string>
-    <string name="mod_version">Versión CyanogenMod</string>
+    <string name="mod_version">Versión Ganbarou</string>
     <string name="mod_version_default">Desconocida</string>
     <string name="build_date">Fecha de compilación</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Memoria</string>
-    <string name="anonymous_statistics_title">Estadísticas CyanogenMod</string>
-    <string name="anonymous_statistics_summary">Ayuda a mejorar CyanogenMod mediante el envío anónimo de estadísticas</string>
+    <string name="anonymous_statistics_title">Estadísticas Ganbarou</string>
+    <string name="anonymous_statistics_summary">Ayuda a mejorar Ganbarou mediante el envío anónimo de estadísticas</string>
     <string name="anonymous_statistics_warning_title">Aviso</string>
-    <string name="anonymous_statistics_warning">Permitiendo la recopilación y envío de estadísticas de CyanogenMod, autorizas el envío de información de carácter no personal a los desarrolladores de CyanogenMod para hacer un seguimiento de las instalaciones que realices en los dispositivos. La información enviada incluye un identificador único que no compromete tu privacidad ni tu información personal. Esta información es enviada durante el arranque.\n\nPara ver un ejemplo de la información enviada, pulsa en \u00ABPrevisualizar datos\u00BB</string>
+    <string name="anonymous_statistics_warning">Permitiendo la recopilación y envío de estadísticas de Ganbarou, autorizas el envío de información de carácter no personal a los desarrolladores de Ganbarou para hacer un seguimiento de las instalaciones que realices en los dispositivos. La información enviada incluye un identificador único que no compromete tu privacidad ni tu información personal. Esta información es enviada durante el arranque.\n\nPara ver un ejemplo de la información enviada, pulsa en \u00ABPrevisualizar datos\u00BB</string>
     <string name="enable_reporting_title">Activar envío estadísticas</string>
     <string name="preview_data_title">Previsualizar datos</string>
     <string name="view_stats_title">Ver estadísticas</string>
@@ -403,7 +403,7 @@
     <string name="power_menu_airplane_title">Modo avión</string>
     <string name="power_menu_user_title">Cambiar de usuario</string>
     <string name="power_menu_sound_title">Panel de sonido</string>
-    <string name="cmupdate_settings_title">Actualizaciones CyanogenMod</string>
+    <string name="cmupdate_settings_title">Actualizaciones Ganbarou</string>
     <string name="cmupdate_settings_summary">Comprobar, ver e instalar actualizaciones disponibles</string>
     <string name="advanced_settings_title">Opciones avanzadas</string>
     <string name="ime_switcher_notify">Selector en notificaciones</string>
