--- a/res/values-hu/cm_strings.xml
+++ b/res/values-hu/cm_strings.xml
@@ -56,15 +56,15 @@
     <string name="notification_vibrate_during_calls_title">Rezgés hívás közben</string>
     <string name="notification_vibrate_during_calls_summary">Lágy rezgés engedélyezése hívás közben</string>
     <string name="device_hostname">Eszköz elérési neve</string>
-    <string name="mod_version">CyanogenMod verzió</string>
+    <string name="mod_version">Ganbarou verzió</string>
     <string name="mod_version_default">Ismeretlen</string>
     <string name="build_date">Build dátuma</string>
     <string name="cpu_info">Processzor</string>
     <string name="mem_info">Memória</string>
-    <string name="anonymous_statistics_title">CyanogenMod Statisztika</string>
-    <string name="anonymous_statistics_summary">Segítsen a CyanogenMod jobbá tételében, kapcsolja be a névtelen statisztikai adatok gyűjtését</string>
+    <string name="anonymous_statistics_title">Ganbarou Statisztika</string>
+    <string name="anonymous_statistics_summary">Segítsen a Ganbarou jobbá tételében, kapcsolja be a névtelen statisztikai adatok gyűjtését</string>
     <string name="anonymous_statistics_warning_title">Tudnivalók</string>
-    <string name="anonymous_statistics_warning">A CyanogenMod statisztika engedélyezése nem terjed ki személyes adatokra, csak egy egyedi azonosítóval azonosítjuk az eszközöket. A statisztika minden rendszerindításkor elküldésre kerül, hogy követni tudjuk az új telepítéseket.\n\nAz elküldött adatok menüpont alatt tekintheti meg a statisztikai adatokat.</string>
+    <string name="anonymous_statistics_warning">A Ganbarou statisztika engedélyezése nem terjed ki személyes adatokra, csak egy egyedi azonosítóval azonosítjuk az eszközöket. A statisztika minden rendszerindításkor elküldésre kerül, hogy követni tudjuk az új telepítéseket.\n\nAz elküldött adatok menüpont alatt tekintheti meg a statisztikai adatokat.</string>
     <string name="enable_reporting_title">Statisztika engedélyezése</string>
     <string name="preview_data_title">Elküldött adatok</string>
     <string name="view_stats_title">Statisztika megtekintése</string>
@@ -401,7 +401,7 @@
     <string name="power_menu_airplane_title">Repülőgép üzemmód</string>
     <string name="power_menu_user_title">Felhasználóváltás</string>
     <string name="power_menu_sound_title">Hang mód</string>
-    <string name="cmupdate_settings_title">CyanogenMod frissítések</string>
+    <string name="cmupdate_settings_title">Ganbarou frissítések</string>
     <string name="cmupdate_settings_summary">Elérhető frissítések keresése, megtekintése, vagy telepítése</string>
     <string name="advanced_settings_title">Haladó</string>
     <string name="ime_switcher_notify">Beviteli mód választó</string>
