--- a/res/values-ro/cm_strings.xml
+++ b/res/values-ro/cm_strings.xml
@@ -27,15 +27,15 @@
     <string name="start_time_title">"Început"</string>
     <string name="end_time_title">"Sfârşit"</string>
     <string name="device_hostname">"Nume host dispozitiv"</string>
-    <string name="mod_version">"Versiune CyanogenMod"</string>
+    <string name="mod_version">"Versiune Ganbarou"</string>
     <string name="mod_version_default">"Necunoscută"</string>
     <string name="build_date">"Dată build"</string>
     <string name="cpu_info">"Procesor"</string>
     <string name="mem_info">"Memorie"</string>
-    <string name="anonymous_statistics_title">"Statistici CyanogenMod"</string>
-    <string name="anonymous_statistics_summary">"Ajutaţi la îmbunătăţirea CyanogenMod, optând pentru expedierea rapoartelor statistice anonime"</string>
+    <string name="anonymous_statistics_title">"Statistici Ganbarou"</string>
+    <string name="anonymous_statistics_summary">"Ajutaţi la îmbunătăţirea Ganbarou, optând pentru expedierea rapoartelor statistice anonime"</string>
     <string name="anonymous_statistics_warning_title">"Despre"</string>
-    <string name="anonymous_statistics_warning">"Optând pentru Statisticile CyanogenMod permiteţi expedierea datelor non-personale către dezvoltatorii CyanogenMod pentru urmărirea instalărilor unice în dispozitive. Informaţiile transmise includ un identificator unic, care nu compromite confidenţialitatea dvs. sau a datelor cu caracter personal. Datele sunt transmise în timpul fiecărei conectări a dispozitivului. \n\nPentru un exemplu de date care sunt expediate, apăsaţi pe Previzualizare date."</string>
+    <string name="anonymous_statistics_warning">"Optând pentru Statisticile Ganbarou permiteţi expedierea datelor non-personale către dezvoltatorii Ganbarou pentru urmărirea instalărilor unice în dispozitive. Informaţiile transmise includ un identificator unic, care nu compromite confidenţialitatea dvs. sau a datelor cu caracter personal. Datele sunt transmise în timpul fiecărei conectări a dispozitivului. \n\nPentru un exemplu de date care sunt expediate, apăsaţi pe Previzualizare date."</string>
     <string name="enable_reporting_title">"Activaţi raportarea"</string>
     <string name="preview_data_title">"Previzualizare date"</string>
     <string name="view_stats_title">"Vizualizare statistici"</string>
@@ -313,7 +313,7 @@
     <string name="power_menu_airplane_title">"Mod avion"</string>
     <string name="power_menu_user_title">"Comutare utilizator"</string>
     <string name="power_menu_sound_title">"Panou sunet"</string>
-    <string name="cmupdate_settings_title">"Actualizări CyanogenMod"</string>
+    <string name="cmupdate_settings_title">"Actualizări Ganbarou"</string>
     <string name="cmupdate_settings_summary">"Verificaţi actualizări disponibile"</string>
     <string name="advanced_settings_title">"Avansat"</string>
     <string name="ime_switcher_notify">"Selector notificare"</string>
