--- a/res/values-sk/cm_strings.xml
+++ b/res/values-sk/cm_strings.xml
@@ -54,15 +54,15 @@
     <string name="notification_convert_sound_to_vibration_title">Vibrovať pri upozornení</string>
     <string name="notification_convert_sound_to_vibration_summary">V režime vibrácií budú všetky upozornenia vibrovať bez ohľadu na individuálne nastavenia aplikácií</string>
     <string name="device_hostname">Názov hostiteľa pre zariadenie</string>
-    <string name="mod_version">Verzia CyanogenMod-u</string>
+    <string name="mod_version">Verzia Ganbarou-u</string>
     <string name="mod_version_default">Neznáma</string>
     <string name="build_date">Dátum zostavy</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Pamäť</string>
-    <string name="anonymous_statistics_title">Štatistika CyanogenMod-u</string>
-    <string name="anonymous_statistics_summary">Pomôžte tvoriť lepší CyanogenMod zvolením anonymných štatistických hlásení</string>
+    <string name="anonymous_statistics_title">Štatistika Ganbarou-u</string>
+    <string name="anonymous_statistics_summary">Pomôžte tvoriť lepší Ganbarou zvolením anonymných štatistických hlásení</string>
     <string name="anonymous_statistics_warning_title">O štatistike</string>
-    <string name="anonymous_statistics_warning">Zvolením štatistík CyanogenMod-u bude povolené odosielanie neosobných údajov vývojárom CyanogenMod-u, aby mohli stopovať jednotlivé inštalácie naprieč zariadeniami. Odoslané informácie obsahujú unikátny identifikátor, ktorý neohrozuje vaše súkromné alebo osobné údaje. Údaje sú odoslané pri každom spustení.\n\nNa ukážku odosielaných údajov ťuknite na Prehľad údajov.</string>
+    <string name="anonymous_statistics_warning">Zvolením štatistík Ganbarou-u bude povolené odosielanie neosobných údajov vývojárom Ganbarou-u, aby mohli stopovať jednotlivé inštalácie naprieč zariadeniami. Odoslané informácie obsahujú unikátny identifikátor, ktorý neohrozuje vaše súkromné alebo osobné údaje. Údaje sú odoslané pri každom spustení.\n\nNa ukážku odosielaných údajov ťuknite na Prehľad údajov.</string>
     <string name="enable_reporting_title">Povoliť hlásenie</string>
     <string name="preview_data_title">Prehľad údajov</string>
     <string name="view_stats_title">Zobraziť štatistiky</string>
@@ -415,7 +415,7 @@
     <string name="power_menu_airplane_title">Režim V lietadle</string>
     <string name="power_menu_user_title">Prepínač užívateľov</string>
     <string name="power_menu_sound_title">Panel hlasitosti</string>
-    <string name="cmupdate_settings_title">Aktualizácie CyanogenMod</string>
+    <string name="cmupdate_settings_title">Aktualizácie Ganbarou</string>
     <string name="cmupdate_settings_summary">Skontrolujte, zobrazte alebo nainštalujte dostupné aktualizácie</string>
     <string name="advanced_settings_title">Pokročilé</string>
     <string name="ime_switcher_notify">Oznámenie pre výber vstupnej metódy</string>
