--- a/res/values-sv/cm_strings.xml
+++ b/res/values-sv/cm_strings.xml
@@ -56,15 +56,15 @@
     <string name="notification_vibrate_during_calls_title">Vibrera under samtal</string>
     <string name="notification_vibrate_during_calls_summary">Inkommande aviseringar kommer att vibrera mjukt under samtal</string>
     <string name="device_hostname">Enhetens värdnamn</string>
-    <string name="mod_version">CyanogenMod-version</string>
+    <string name="mod_version">Ganbarou-version</string>
     <string name="mod_version_default">Okänd</string>
     <string name="build_date">Byggdatum</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Minne</string>
-    <string name="anonymous_statistics_title">CyanogenMod-statistik</string>
-    <string name="anonymous_statistics_summary">Hjälp till att göra CyanogenMod bättre genom att skicka anonyma statistikrapporter</string>
+    <string name="anonymous_statistics_title">Ganbarou-statistik</string>
+    <string name="anonymous_statistics_summary">Hjälp till att göra Ganbarou bättre genom att skicka anonyma statistikrapporter</string>
     <string name="anonymous_statistics_warning_title">Om</string>
-    <string name="anonymous_statistics_warning">Att delta i CyanogenMod Statistics kommer att tillåta överföringen av opersonlig data till CyanogenMods utvecklare för att kunna spåra unika installationer enheter emellan. Den inlämnade informationen inkluderar ett unikt ID, som inte äventyrar din integritet eller personliga data. Datan skickas in vid varje uppstart.\n\nFör att se ett exempel på inskickad data, tryck på Förhandsgranska data.</string>
+    <string name="anonymous_statistics_warning">Att delta i Ganbarou Statistics kommer att tillåta överföringen av opersonlig data till Ganbarou utvecklare för att kunna spåra unika installationer enheter emellan. Den inlämnade informationen inkluderar ett unikt ID, som inte äventyrar din integritet eller personliga data. Datan skickas in vid varje uppstart.\n\nFör att se ett exempel på inskickad data, tryck på Förhandsgranska data.</string>
     <string name="enable_reporting_title">Aktivera rapportering</string>
     <string name="preview_data_title">Förhandsgranska data</string>
     <string name="view_stats_title">Visa statistik</string>
@@ -405,7 +405,7 @@
     <string name="power_menu_airplane_title">Flygplansläge</string>
     <string name="power_menu_user_title">Användarväxlare</string>
     <string name="power_menu_sound_title">Ljudpanel</string>
-    <string name="cmupdate_settings_title">CyanogenMod-uppdateringar</string>
+    <string name="cmupdate_settings_title">Ganbarou-uppdateringar</string>
     <string name="cmupdate_settings_summary">Sök efter, granska och installera tillgängliga uppdateringar</string>
     <string name="advanced_settings_title">Avancerat</string>
     <string name="ime_switcher_notify">Inmatningsavisering</string>
