--- a/res/values-da/cm_strings.xml
+++ b/res/values-da/cm_strings.xml
@@ -56,15 +56,15 @@
     <string name="notification_vibrate_during_calls_title">Vibrér under opkald</string>
     <string name="notification_vibrate_during_calls_summary">Indgående underretninger vil vibrere blidt under telefonopkald</string>
     <string name="device_hostname">Enhedens værtsnavn</string>
-    <string name="mod_version">CyanogenMod-version</string>
+    <string name="mod_version">Ganbarou-version</string>
     <string name="mod_version_default">Ukendt</string>
     <string name="build_date">Kørselsdato</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Hukommelse</string>
-    <string name="anonymous_statistics_title">CyanogenMod-statistikker</string>
-    <string name="anonymous_statistics_summary">Hjælp med at gøre CyanogenMod bedre ved at deltage i rapportering af anonyme statistikker</string>
+    <string name="anonymous_statistics_title">Ganbarou-statistikker</string>
+    <string name="anonymous_statistics_summary">Hjælp med at gøre Ganbarou bedre ved at deltage i rapportering af anonyme statistikker</string>
     <string name="anonymous_statistics_warning_title">Om</string>
-    <string name="anonymous_statistics_warning">Deltagelse af CyanogenMod-statistikker vil tillade ikke-personlige data, der skal forelægges for udviklerne af CyanogenMod, at spore unikke installationer på tværs af enheder. De indsendte oplysninger omfatter en entydig indikator, som ikke kompromitterer dit privatliv eller personlige data. Dataene indsendes under hver opstart.\n\nFor et eksempel på de data, der er indsendt, skal du trykke på Få vist data.</string>
+    <string name="anonymous_statistics_warning">Deltagelse af Ganbarou-statistikker vil tillade ikke-personlige data, der skal forelægges for udviklerne af Ganbarou, at spore unikke installationer på tværs af enheder. De indsendte oplysninger omfatter en entydig indikator, som ikke kompromitterer dit privatliv eller personlige data. Dataene indsendes under hver opstart.\n\nFor et eksempel på de data, der er indsendt, skal du trykke på Få vist data.</string>
     <string name="enable_reporting_title">Aktivér rapportering</string>
     <string name="preview_data_title">Få vist data</string>
     <string name="view_stats_title">Vis statistikker</string>
@@ -401,7 +401,7 @@
     <string name="power_menu_airplane_title">Flytilstand</string>
     <string name="power_menu_user_title">Brugerskifter</string>
     <string name="power_menu_sound_title">Lydpanel</string>
-    <string name="cmupdate_settings_title">CyanogenMod-opdateringer</string>
+    <string name="cmupdate_settings_title">Ganbarou-opdateringer</string>
     <string name="cmupdate_settings_summary">Tjek for, se eller installér tilgængelige opdateringer</string>
     <string name="advanced_settings_title">Avanceret</string>
     <string name="ime_switcher_notify">IME-vælgemeddelelse</string>
