--- a/res/values-el/cm_strings.xml
+++ b/res/values-el/cm_strings.xml
@@ -56,16 +56,16 @@
     <string name="notification_vibrate_during_calls_title">Δόνηση κατά την κλήση</string>
     <string name="notification_vibrate_during_calls_summary">Δόνηση στις εισερχόμενες ειδοποιήσεις κατά την διάρκεια μιας κλήσης</string>
     <string name="device_hostname">Hostname συσκευής</string>
-    <string name="mod_version">Έκδοση CyanogenMod</string>
+    <string name="mod_version">Έκδοση Ganbarou</string>
     <string name="mod_version_default">Άγνωστη</string>
     <string name="build_date">Ημερομηνία έκδοσης</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Μνήμη</string>
-    <string name="anonymous_statistics_title">Στατιστικά CyanogenMod</string>
-    <string name="anonymous_statistics_summary">Βοηθήστε το CyanogenMod να γίνει καλύτερο ενεργοποιώντας την αποστολή ανώνυμων στατιστικών στοιχείων</string>
+    <string name="anonymous_statistics_title">Στατιστικά Ganbarou</string>
+    <string name="anonymous_statistics_summary">Βοηθήστε το Ganbarou να γίνει καλύτερο ενεργοποιώντας την αποστολή ανώνυμων στατιστικών στοιχείων</string>
     <string name="anonymous_statistics_warning_title">Σχετικά</string>
-    <string name="anonymous_statistics_warning">Ενεργοποιώντας τα στατιστικά του CyanogenMod επιτρέπετε την αποστολή
-        μη προσωπικών δεδομένων στους προγραμματιστές του CyanogenMod για παρακολούθηση του αριθμού μοναδικών εγκαταστάσεων
+    <string name="anonymous_statistics_warning">Ενεργοποιώντας τα στατιστικά του Ganbarou επιτρέπετε την αποστολή
+        μη προσωπικών δεδομένων στους προγραμματιστές του Ganbarou για παρακολούθηση του αριθμού μοναδικών εγκαταστάσεων
         σε όλες τις συσκευές. Οι πληροφορίες που αποστέλλονται συμπεριλαμβάνουν ένα μοναδικό αναγνωριστικό, το οποίο δεν θέτει
         σε κίνδυνο την ασφάλεια σας ή τα προσωπικά δεδομένα. Τα δεδομένα αποστέλλονται σε κάθε εκκίνηση.\n\nΓια ένα παράδειγμα
         των δεδομένων που αποστέλλονται, πατήστε στην Προεπισκόπηση δεδομένων.</string>
@@ -405,7 +405,7 @@
     <string name="power_menu_airplane_title">Λειτουργία πτήσης</string>
     <string name="power_menu_user_title">Εναλλαγή χρήστη</string>
     <string name="power_menu_sound_title">Πάνελ έντασης</string>
-    <string name="cmupdate_settings_title">Ενημερώσεις CyanogenMod</string>
+    <string name="cmupdate_settings_title">Ενημερώσεις Ganbarou</string>
     <string name="cmupdate_settings_summary">Έλεγχος και εγκατάσταση διαθέσιμων ενημερώσεων</string>
     <string name="advanced_settings_title">Για προχωρημένους</string>
     <string name="ime_switcher_notify">Ειδοποίηση επιλογέα</string>
