--- a/res/values-fi/cm_strings.xml
+++ b/res/values-fi/cm_strings.xml
@@ -57,15 +57,15 @@
     <string name="notification_vibrate_during_calls_title">Värinä puhelun aikana</string>
     <string name="notification_vibrate_during_calls_summary">Tulevat ilmoitukset värisevät hiljaa puhelun aikana</string>
     <string name="device_hostname">Laitteen verkkonimi</string>
-    <string name="mod_version">CyanogenMod-versio</string>
+    <string name="mod_version">Ganbarou-versio</string>
     <string name="mod_version_default">Tuntematon</string>
     <string name="build_date">Luontipäivä</string>
     <string name="cpu_info">Prosessori</string>
     <string name="mem_info">Muisti</string>
-    <string name="anonymous_statistics_title">CyanogenMod-tilastointi</string>
-    <string name="anonymous_statistics_summary">Auta tekemään CyanogenModista parempi tarjoamalla anonyymejä tilastoraportteja</string>
+    <string name="anonymous_statistics_title">Ganbarou-tilastointi</string>
+    <string name="anonymous_statistics_summary">Auta tekemään Ganbarou ista parempi tarjoamalla anonyymejä tilastoraportteja</string>
     <string name="anonymous_statistics_warning_title">Tietoja</string>
-    <string name="anonymous_statistics_warning">CyanogenMod-tilastojen käyttöönotto sallii anonyymien tietojen lähettämisen CyanogenModin kehittäjille, jotta laitteiden järjestelmäasennuksia voidaan seurata. Informaatio sisältää uniikin tunnisteen, joka ei sisällä henkilökohtaisia tietojasi. Tietoa lähetetään jokaisella uudelleenkäynnistyskerralla.\n\nValitse Esikatsele tietoja nähdäksesi, minkälaisia tietoja laitteestasi lähetetään.</string>
+    <string name="anonymous_statistics_warning">Ganbarou-tilastojen käyttöönotto sallii anonyymien tietojen lähettämisen Ganbarou in kehittäjille, jotta laitteiden järjestelmäasennuksia voidaan seurata. Informaatio sisältää uniikin tunnisteen, joka ei sisällä henkilökohtaisia tietojasi. Tietoa lähetetään jokaisella uudelleenkäynnistyskerralla.\n\nValitse Esikatsele tietoja nähdäksesi, minkälaisia tietoja laitteestasi lähetetään.</string>
     <string name="enable_reporting_title">Ota lähettäminen käyttöön</string>
     <string name="preview_data_title">Esikatsele tietoja</string>
     <string name="view_stats_title">Näytä tilastot</string>
@@ -379,7 +379,7 @@
     <string name="power_menu_airplane_title">Lentokonetila</string>
     <string name="power_menu_user_title">Käyttäjät</string>
     <string name="power_menu_sound_title">Äänipaneeli</string>
-    <string name="cmupdate_settings_title">CyanogenMod-päivitykset</string>
+    <string name="cmupdate_settings_title">Ganbarou-päivitykset</string>
     <string name="cmupdate_settings_summary">Tarkista, katso tai asenna saatavilla olevat päivitykset</string>
     <string name="advanced_settings_title">Lisäasetukset</string>
     <string name="ime_switcher_notify">Syöttötavan ilmoitus</string>
