--- a/res/values-fr/cm_strings.xml
+++ b/res/values-fr/cm_strings.xml
@@ -55,15 +55,15 @@
     <string name="notification_vibrate_during_calls_title">Vibreur pendant un appel</string>
     <string name="notification_vibrate_during_calls_summary">Les notifications vibrent légèrement pendant un appel téléphonique</string>
     <string name="device_hostname">Nom d\'hôte de l\'appareil</string>
-    <string name="mod_version">Version CyanogenMod</string>
+    <string name="mod_version">Version Ganbarou</string>
     <string name="mod_version_default">Inconnue</string>
     <string name="build_date">Date de compilation</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Mémoire</string>
-    <string name="anonymous_statistics_title">Statistiques CyanogenMod</string>
-    <string name="anonymous_statistics_summary">Aidez CyanogenMod en participant à l\'envoi de données anonymes pour comptabiliser les installations par type d\'appareil</string>
+    <string name="anonymous_statistics_title">Statistiques Ganbarou</string>
+    <string name="anonymous_statistics_summary">Aidez Ganbarou en participant à l\'envoi de données anonymes pour comptabiliser les installations par type d\'appareil</string>
     <string name="anonymous_statistics_warning_title">À propos</string>
-    <string name="anonymous_statistics_warning">Autoriser l\'envoi de statistiques permet aux développeurs du système CyanogenMod de collecter des données anonymes afin de comptabiliser le nombre d\'installations par type d\'appareil. Les informations envoyées contiennent un identifiant unique de appareil afin de limiter les doublons et en aucune manière ne compromet la sécurité de vos données. Ce jeu d\'informations est envoyé à chaque redémarrage pour ne conserver que les installations actives.\n\nVous pouvez visualiser ces données en sélectionnant \"Prévisualiser les données\".</string>
+    <string name="anonymous_statistics_warning">Autoriser l\'envoi de statistiques permet aux développeurs du système Ganbarou de collecter des données anonymes afin de comptabiliser le nombre d\'installations par type d\'appareil. Les informations envoyées contiennent un identifiant unique de appareil afin de limiter les doublons et en aucune manière ne compromet la sécurité de vos données. Ce jeu d\'informations est envoyé à chaque redémarrage pour ne conserver que les installations actives.\n\nVous pouvez visualiser ces données en sélectionnant \"Prévisualiser les données\".</string>
     <string name="enable_reporting_title">Activer l\'envoi</string>
     <string name="preview_data_title">Prévisualiser les données</string>
     <string name="view_stats_title">Afficher les statistiques</string>
@@ -372,7 +372,7 @@
     <string name="power_menu_airplane_title">Mode avion</string>
     <string name="power_menu_user_title">Utilisateur</string>
     <string name="power_menu_sound_title">Son et vibreur</string>
-    <string name="cmupdate_settings_title">Mises à jour CyanogenMod</string>
+    <string name="cmupdate_settings_title">Mises à jour Ganbarou</string>
     <string name="cmupdate_settings_summary">Vérifier, afficher ou installer les mises à jour disponibles</string>
     <string name="advanced_settings_title">Paramètres avancés</string>
     <string name="ime_switcher_notify">Icône méthode de saisie</string>
