--- a/res/values-it/cm_strings.xml
+++ b/res/values-it/cm_strings.xml
@@ -51,15 +51,15 @@
     <string name="notification_vibrate_during_calls_title">Vibra durante la chiamata</string>
     <string name="notification_vibrate_during_calls_summary">Le notifiche produrranno una leggera vibrazione durante le chiamate</string>
     <string name="device_hostname">Hostname dispositivo</string>
-    <string name="mod_version">Versione CyanogenMod</string>
+    <string name="mod_version">Versione Ganbarou</string>
     <string name="mod_version_default">Sconoscito</string>
     <string name="build_date">Data build</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Memoria</string>
-    <string name="anonymous_statistics_title">Statistiche CyanogenMod</string>
-    <string name="anonymous_statistics_summary">Aiuta a migliorare la Cyanogenmod acconsentendo ad inviare statistiche anonime</string>
+    <string name="anonymous_statistics_title">Statistiche Ganbarou</string>
+    <string name="anonymous_statistics_summary">Aiuta a migliorare la Ganbarou acconsentendo ad inviare statistiche anonime</string>
     <string name="anonymous_statistics_warning_title">Informazioni</string>
-    <string name="anonymous_statistics_warning">Consentire di inviare statistiche anonime permetterà l\'invio di dati non personali agli sviluppatori di Cyanogenmod per contare il numero di installazioni uniche sui diversi dispositivi. Le informazioni inviate includono un identificativo univoco che non compromette la tua privacy o i tuoi dati personali. I dati sono inviati ad ogni avvio.\n\nPer un esempio dei dati inviati premere su Anteprima dati.</string>
+    <string name="anonymous_statistics_warning">Consentire di inviare statistiche anonime permetterà l\'invio di dati non personali agli sviluppatori di Ganbarou per contare il numero di installazioni uniche sui diversi dispositivi. Le informazioni inviate includono un identificativo univoco che non compromette la tua privacy o i tuoi dati personali. I dati sono inviati ad ogni avvio.\n\nPer un esempio dei dati inviati premere su Anteprima dati.</string>
     <string name="enable_reporting_title">Attiva invio</string>
     <string name="preview_data_title">Anteprima dati</string>
     <string name="view_stats_title">Guarda statistiche</string>
@@ -395,7 +395,7 @@
     <string name="power_menu_airplane_title">Modalità aereo</string>
     <string name="power_menu_user_title">Cambia utente</string>
     <string name="power_menu_sound_title">Pannello suoni</string>
-    <string name="cmupdate_settings_title">Aggiornamento CyanogenMod</string>
+    <string name="cmupdate_settings_title">Aggiornamento Ganbarou</string>
     <string name="cmupdate_settings_summary">Controlla visualizza e installa gli aggiornamenti disponibili</string>
     <string name="advanced_settings_title">Avanzate</string>
     <string name="ime_switcher_notify">Notifica metodo inserimento</string>
