--- a/res/values-ja/cm_strings.xml
+++ b/res/values-ja/cm_strings.xml
@@ -342,10 +342,10 @@
     <string name="pref_use_16bpp_alpha_title">16ビット透過</string>
     <string name="pref_use_16bpp_alpha_summary">16ビット透過を使用することでスクロールのパフォーマンスが向上しますが、低品質で稀に不自然に見えます(
 要再起動)</string>
-    <string name="anonymous_statistics_title">CyanogenMod 利用統計</string>
-    <string name="anonymous_statistics_summary">CyanogenMod をより良くするための匿名利用統計報告をオプトインする</string>
+    <string name="anonymous_statistics_title">頑張ろう 利用統計</string>
+    <string name="anonymous_statistics_summary">頑張ろう をより良くするための匿名利用統計報告をオプトインする</string>
     <string name="anonymous_statistics_warning_title">利用統計について</string>
-    <string name="anonymous_statistics_warning">匿名利用状況の送信を許諾することによって、CyanogenModの開発者がデバイス単位のユニークインストール数を追跡することができます。
+    <string name="anonymous_statistics_warning">匿名利用状況の送信を許諾することによって、頑張ろうの開発者がデバイス単位のユニークインストール数を追跡することができます。
                 送信される情報にはユニークIDが含まれますが、これはあなたの個人情報、端末のタイプ及びバージョン情報とは結びつきません。
                 データ送信は端末の起動時に毎回行われ、送信されるデータの例はプレビューをクリックすることにより確認できます。</string>
     <string name="enable_reporting_title">リポートを有効にする</string>
@@ -358,7 +358,7 @@
     <string name="preview_version_title">バージョン</string>
     <string name="preview_country_title">国</string>
     <string name="preview_carrier_title">キャリア</string>
-    <string name="mod_version">CyanogenMod バージョン</string>
+    <string name="mod_version">頑張ろう バージョン</string>
     <string name="mod_version_default">不明</string>
     <string name="build_date">ビルド日時</string>
     <string name="adb_over_network">ADBオーバーネットワーク</string>
@@ -446,7 +446,7 @@
     <string name="volume_key_cursor_control_off">無効</string>
     <string name="volume_key_cursor_control_on">音量アップ/ダウンでカーソルを左/右に移動する</string>
     <string name="volume_key_cursor_control_on_reverse">音量アップ/ダウンでカーソルを右/左に移動する</string>
-    <string name="cmupdate_settings_title">CyanogenModアップデート</string>
+    <string name="cmupdate_settings_title">頑張ろう アップデート</string>
     <string name="cmupdate_settings_summary">利用できるアップデートのチェック、表示及びインストール</string>
     <string name="app_security_title">アプリのセキュリティ</string>
     <string name="sms_security_check_limit_title">SMSメッセージ制限</string>
