--- a/res/values-ko/cm_strings.xml
+++ b/res/values-ko/cm_strings.xml
@@ -30,13 +30,13 @@
     <string name="notification_convert_sound_to_vibration_title">알림 시 진동</string>
     <string name="notification_convert_sound_to_vibration_summary">진동 모드에서 알림이 오면 앱의 개별 설정과 관계없이 진동 사용</string>
     <string name="device_hostname">장치 호스트 이름</string>
-    <string name="mod_version">CyanogenMod 버전</string>
+    <string name="mod_version">Ganbarou 버전</string>
     <string name="mod_version_default">알 수 없음</string>
     <string name="build_date">빌드 날짜</string>
-    <string name="anonymous_statistics_title">CyanogenMod 사용 통계</string>
-    <string name="anonymous_statistics_summary">CyanogenMod 개선을 위해 익명으로 사용 통계 보내기</string>
+    <string name="anonymous_statistics_title">Ganbarou 사용 통계</string>
+    <string name="anonymous_statistics_summary">Ganbarou 개선을 위해 익명으로 사용 통계 보내기</string>
     <string name="anonymous_statistics_warning_title">정보</string>
-    <string name="anonymous_statistics_warning">CyanogenMod 사용 통계를 보내도록 설정하면 익명의 장치 설치 정보를 CyanogenMod 개발자에게 전송합니다. 전송되는 정보에는 고유 ID가 부여되어 있으며, 이는 귀하의 어떠한 개인 정보도 포함되어 있지 않습니다. 정보는 장치 부팅 시 전송됩니다.\n\n전송되는 정보의 예를 보려면 정보 미리보기를 선택하십시오.</string>
+    <string name="anonymous_statistics_warning">Ganbarou 사용 통계를 보내도록 설정하면 익명의 장치 설치 정보를 Ganbarou 개발자에게 전송합니다. 전송되는 정보에는 고유 ID가 부여되어 있으며, 이는 귀하의 어떠한 개인 정보도 포함되어 있지 않습니다. 정보는 장치 부팅 시 전송됩니다.\n\n전송되는 정보의 예를 보려면 정보 미리보기를 선택하십시오.</string>
     <string name="enable_reporting_title">사용 통계 제공</string>
     <string name="preview_data_title">정보 미리보기</string>
     <string name="view_stats_title">통계 보기</string>
@@ -294,7 +294,7 @@
     <string name="power_menu_airplane_title">비행기 모드</string>
     <string name="power_menu_user_title">사용자 전환</string>
     <string name="power_menu_sound_title">벨소리</string>
-    <string name="cmupdate_settings_title">CyanogenMod 업데이트</string>
+    <string name="cmupdate_settings_title">Ganbarou 업데이트</string>
     <string name="cmupdate_settings_summary">사용 가능한 업데이트 조회, 확인 또는 설치</string>
     <string name="advanced_settings_title">고급</string>
     <string name="ime_switcher_notify">선택 알림</string>
