--- a/res/values-lt/cm_strings.xml
+++ b/res/values-lt/cm_strings.xml
@@ -28,15 +28,15 @@
     <string name="start_time_title">Pradėti</string>
     <string name="end_time_title">Baigti</string>
     <string name="device_hostname">Įrenginio vardas tinkle</string>
-    <string name="mod_version">CyanogenMod versija</string>
+    <string name="mod_version">Ganbarou versija</string>
     <string name="mod_version_default">Nežinoma</string>
     <string name="build_date">Surinkimo data</string>
     <string name="cpu_info">Procesorius</string>
     <string name="mem_info">Atmintis</string>
-    <string name="anonymous_statistics_title">CyanogenMod statistika</string>
-    <string name="anonymous_statistics_summary">Padėkite tobulinti CyanogenMod įjungdami statistikos siuntimą</string>
+    <string name="anonymous_statistics_title">Ganbarou statistika</string>
+    <string name="anonymous_statistics_summary">Padėkite tobulinti Ganbarou įjungdami statistikos siuntimą</string>
     <string name="anonymous_statistics_warning_title">Apie</string>
-    <string name="anonymous_statistics_warning">Dalinantis CyanogenMod Statistika nebus renkama Jūsų asmeninė informacija, o tik sistemos darbas bei klaidos. Ši informacija padės kūrėjams tobulinti CyanogenMod bei šalinti klaidas.</string>
+    <string name="anonymous_statistics_warning">Dalinantis Ganbarou Statistika nebus renkama Jūsų asmeninė informacija, o tik sistemos darbas bei klaidos. Ši informacija padės kūrėjams tobulinti Ganbarou bei šalinti klaidas.</string>
     <string name="enable_reporting_title">Įjungti raportavimą</string>
     <string name="preview_data_title">Žiūrėti duomenis</string>
     <string name="view_stats_title">Žiūrėti statistiką</string>
@@ -324,7 +324,7 @@
     <string name="power_menu_airplane_title">Lėktuvo rež.</string>
     <string name="power_menu_user_title">Naudotojo keitimas</string>
     <string name="power_menu_sound_title">Garso panelė</string>
-    <string name="cmupdate_settings_title">CyanogenMod atnaujinimai</string>
+    <string name="cmupdate_settings_title">Ganbarou atnaujinimai</string>
     <string name="cmupdate_settings_summary">Tikrinti, žiūrėti ar įdiegti atnaujinimus</string>
     <string name="advanced_settings_title">Išplėstinis</string>
     <string name="ime_switcher_notify">Pasirinkimo įspėjimas</string>
