--- a/res/values-nb/cm_strings.xml
+++ b/res/values-nb/cm_strings.xml
@@ -54,16 +54,16 @@
     <string name="notification_convert_sound_to_vibration_title">Vibrer ved varsler</string>
     <string name="notification_convert_sound_to_vibration_summary">I vibreringsmodus vil alle varslinger vibrere, uavhengig av individuelle appinnstillinger</string>
     <string name="device_hostname">Enhetens vertsnavn</string>
-    <string name="mod_version">CyanogenMod versjon</string>
+    <string name="mod_version">Ganbarou versjon</string>
     <string name="mod_version_default">Ukjent</string>
     <string name="build_date">Byggdato</string>
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Minne</string>
-    <string name="anonymous_statistics_title">CyanogenMod-statistikk</string>
-    <string name="anonymous_statistics_summary">Bidra til å gjøre CyanogenMod bedre ved å sende inn anonym statistikk.</string>
+    <string name="anonymous_statistics_title">Ganbarou-statistikk</string>
+    <string name="anonymous_statistics_summary">Bidra til å gjøre Ganbarou bedre ved å sende inn anonym statistikk.</string>
     <string name="anonymous_statistics_warning_title">Om</string>
-    <string name="anonymous_statistics_warning">Ved å velge å sende inn statistikk til Cyanogenmod vil ikke-personlige data sendes til utviklerne
-        av CyanogenMod slik at de kan spore ulike installasjoner på tvers av enheter. Dataene blir sendt under hver oppstart.\n\nFor å
+    <string name="anonymous_statistics_warning">Ved å velge å sende inn statistikk til Ganbarou vil ikke-personlige data sendes til utviklerne
+        av Ganbarou slik at de kan spore ulike installasjoner på tvers av enheter. Dataene blir sendt under hver oppstart.\n\nFor å
         se hvilke data som sendes, trykk på Forhåndsvis Data.</string>
     <string name="enable_reporting_title">Aktiver rapportering</string>
     <string name="preview_data_title">Forhåndsvis data</string>
@@ -357,7 +357,7 @@
     <string name="power_menu_airplane_title">Flymodus</string>
     <string name="power_menu_user_title">Brukervelger</string>
     <string name="power_menu_sound_title">Lydpanel</string>
-    <string name="cmupdate_settings_title">CyanogenMod-oppdateringer</string>
+    <string name="cmupdate_settings_title">Ganbarou-oppdateringer</string>
     <string name="cmupdate_settings_summary">Vis, se etter eller installer tilgjengelige oppdateringer</string>
     <string name="advanced_settings_title">Avansert</string>
     <string name="ime_switcher_notify">IME-varsling</string>
