--- a/res/values-pl/cm_strings.xml
+++ b/res/values-pl/cm_strings.xml
@@ -30,15 +30,15 @@
     <string name="notification_convert_sound_to_vibration_title">Powiadamiaj wibracjami</string>
     <string name="notification_convert_sound_to_vibration_summary">W tym trybie wszystkie powiadomienia będą wibrowały niezależnie od indywidualnych ustawień aplikacji</string>
     <string name="device_hostname">Nazwa hosta urządzenia</string>
-    <string name="mod_version">Wersja CyanogenMod</string>
+    <string name="mod_version">Wersja Ganbarou</string>
     <string name="mod_version_default">Nieznana</string>
     <string name="build_date">Data kompilacji</string>
     <string name="cpu_info">Procesor</string>
     <string name="mem_info">Pamięć</string>
-    <string name="anonymous_statistics_title">Statystyki CyanogenMod</string>
-    <string name="anonymous_statistics_summary">Pomóż ulepszyć CyanogenMod, pozwalając na wysyłanie anonimowych statystyk</string>
+    <string name="anonymous_statistics_title">Statystyki Ganbarou</string>
+    <string name="anonymous_statistics_summary">Pomóż ulepszyć Ganbarou, pozwalając na wysyłanie anonimowych statystyk</string>
     <string name="anonymous_statistics_warning_title">Informacje</string>
-    <string name="anonymous_statistics_warning">Udział w statystykach zezwoli na przesyłanie anonimowych danych twórcom CyanogenModa w celu badania liczby aktywnych urządzeń. Raport zawiera unikatowy ID, który nie zagraża Twojej prywatności ani danym osobowym. Dane są przesyłane przy każdym uruchomieniu.\n\nAby zobaczyć przykładowe wysyłane informacje, podejrzyj swoje dane.</string>
+    <string name="anonymous_statistics_warning">Udział w statystykach zezwoli na przesyłanie anonimowych danych twórcom Ganbarou w celu badania liczby aktywnych urządzeń. Raport zawiera unikatowy ID, który nie zagraża Twojej prywatności ani danym osobowym. Dane są przesyłane przy każdym uruchomieniu.\n\nAby zobaczyć przykładowe wysyłane informacje, podejrzyj swoje dane.</string>
     <string name="enable_reporting_title">Włącz raportowanie</string>
     <string name="preview_data_title">Podejrzyj swoje dane</string>
     <string name="view_stats_title">Zobacz statystyki</string>
@@ -332,7 +332,7 @@
     <string name="power_menu_airplane_title">Tryb samolotowy</string>
     <string name="power_menu_user_title">Przełączanie użytkownika</string>
     <string name="power_menu_sound_title">Panel dźwięku</string>
-    <string name="cmupdate_settings_title">Aktualizacje CyanogenMod</string>
+    <string name="cmupdate_settings_title">Aktualizacje Ganbarou</string>
     <string name="cmupdate_settings_summary">Znajdź i zainstaluj dostępne aktualizacje</string>
     <string name="advanced_settings_title">Zaawansowane</string>
     <string name="ime_switcher_notify">Ikona klawiatury</string>
