--- a/res/values-ru/cm_strings.xml
+++ b/res/values-ru/cm_strings.xml
@@ -43,7 +43,7 @@
     <string name="device_hostname">Имя хоста</string>
 
     <!-- About phone screen,  setting option name-->
-    <string name="mod_version">Версия CyanogenMod</string>
+    <string name="mod_version">Версия Ganbarou</string>
     <string name="mod_version_default">Неизвестно</string>
 
     <!-- About phone screen, build date of ROM -->
@@ -57,10 +57,10 @@
 
     <!-- Anonymous Statistics #CM -->
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
-    <string name="anonymous_statistics_title">Статистика CyanogenMod</string>
+    <string name="anonymous_statistics_title">Статистика Ganbarou</string>
     <string name="anonymous_statistics_summary">Помогите сделать CM лучше, включив отправку анонимных отчётов</string>
     <string name="anonymous_statistics_warning_title">Информация об использовании</string>
-    <string name="anonymous_statistics_warning">Анонимные отчёты позволяют разработчикам CyanogenMod отслеживать установки на различные устройства. Отсылаемая информацию включает в себя тип устройства, версию прошивки и уникальный идентификатор, отправка которого никаким образом не вредит Вашей конфиденциальности. Отчёт отсылается при каждой загрузке устройства.\n\nЧтобы посмотреть, какие данные отсылаются, нажмите \"Предпросмотр\".</string>
+    <string name="anonymous_statistics_warning">Анонимные отчёты позволяют разработчикам Ganbarou отслеживать установки на различные устройства. Отсылаемая информацию включает в себя тип устройства, версию прошивки и уникальный идентификатор, отправка которого никаким образом не вредит Вашей конфиденциальности. Отчёт отсылается при каждой загрузке устройства.\n\nЧтобы посмотреть, какие данные отсылаются, нажмите \"Предпросмотр\".</string>
     <string name="enable_reporting_title">Включить отправку отчётов</string>
     <string name="preview_data_title">Предпросмотр</string>
     <string name="view_stats_title">Статистика</string>
@@ -501,7 +501,7 @@
     <string name="power_menu_sound_title">Звуковая панель</string>
 
     <!-- CM Updater -->
-    <string name="cmupdate_settings_title">Обновление CyanogenMod</string>
+    <string name="cmupdate_settings_title">Обновление Ganbarou</string>
     <string name="cmupdate_settings_summary">Проверка и установка доступных обновлений</string>
 
     <!-- Advanced, Device specific (DeviceParts) settings -->
