--- a/res/values-tr/cm_strings.xml
+++ b/res/values-tr/cm_strings.xml
@@ -54,15 +54,15 @@
     <string name="notification_convert_sound_to_vibration_title">Bildirimlerde titre</string>
     <string name="notification_convert_sound_to_vibration_summary">Titreşim modunda uygulama ayarlarından bağımsız olarak her bildirim titreyecektir</string>
     <string name="device_hostname">Cihaz hostname\'i</string>
-    <string name="mod_version">CyanogenMod sürümü</string>
+    <string name="mod_version">Ganbarou sürümü</string>
     <string name="mod_version_default">Bilinmiyor</string>
     <string name="build_date">İnşa tarihi</string>
     <string name="cpu_info">İşlemci</string>
     <string name="mem_info">Bellek</string>
-    <string name="anonymous_statistics_title">CyanogenMod istatistikleri</string>
-    <string name="anonymous_statistics_summary">Anonim istatistik raporları göndererek CyanogenMod\'un daha iyi olmasına yardım edin</string>
+    <string name="anonymous_statistics_title">Ganbarou istatistikleri</string>
+    <string name="anonymous_statistics_summary">Anonim istatistik raporları göndererek Ganbarou\'un daha iyi olmasına yardım edin</string>
     <string name="anonymous_statistics_warning_title">Hakkında</string>
-    <string name="anonymous_statistics_warning">CyanogenMod İstatistiklerine dahil olmak kişisel olmayan verilerin CyanogenMod geliştirilerine cihazlar arasındaki benzersiz yüklemeleri tahip etmeleri için gönderilmesine izin verir. Bu bilgi kişisel bilgi içermeyen ve gizliliğinizi tehtit etmeyen bir benzersiz numara da içerir. Veri her başlangıçta gönderilir.\n\nGönderilecek verinin örneğini görmek için Veriyi önizle butonunu kullanın. </string>
+    <string name="anonymous_statistics_warning">Ganbarou İstatistiklerine dahil olmak kişisel olmayan verilerin Ganbarou geliştirilerine cihazlar arasındaki benzersiz yüklemeleri tahip etmeleri için gönderilmesine izin verir. Bu bilgi kişisel bilgi içermeyen ve gizliliğinizi tehtit etmeyen bir benzersiz numara da içerir. Veri her başlangıçta gönderilir.\n\nGönderilecek verinin örneğini görmek için Veriyi önizle butonunu kullanın. </string>
     <string name="enable_reporting_title">Raporlamayı etkinleştir</string>
     <string name="preview_data_title">Veriyi önizle</string>
     <string name="view_stats_title">İstatistikleri görüntüle</string>
@@ -357,7 +357,7 @@
     <string name="power_menu_airplane_title">Uçak modu</string>
     <string name="power_menu_user_title">Kullanıcı değiştirici</string>
     <string name="power_menu_sound_title">Ses paneli</string>
-    <string name="cmupdate_settings_title">CyanogenMod güncellemeleri</string>
+    <string name="cmupdate_settings_title">Ganbarou güncellemeleri</string>
     <string name="cmupdate_settings_summary">Güncellemeleri denetleyin, görüntüleyin ve yükleyin</string>
     <string name="advanced_settings_title">Gelişmiş</string>
     <string name="ime_switcher_notify">Giriş modu bildirimi</string>
