--- a/res/values-uk/cm_strings.xml
+++ b/res/values-uk/cm_strings.xml
@@ -29,15 +29,15 @@
     <string name="notification_convert_sound_to_vibration_title">Вібрація при сповіщеннях</string>
     <string name="notification_convert_sound_to_vibration_summary">В режимі \"Вібро\" вібрувати при сповіщеннях незалежно від налаштувань програм</string>
     <string name="device_hostname">Ім’я пристрою</string>
-    <string name="mod_version">Версія CyanogenMod</string>
+    <string name="mod_version">Версія Ganbarou</string>
     <string name="mod_version_default">Невідомо</string>
     <string name="build_date">Дата збірки</string>
     <string name="cpu_info">Процесор</string>
     <string name="mem_info">Пам’ять</string>
-    <string name="anonymous_statistics_title">Статистика CyanogenMod</string>
+    <string name="anonymous_statistics_title">Статистика Ganbarou</string>
     <string name="anonymous_statistics_summary">Допоможіть зробити CM краще, увімкнувши відправку анонімних звітів</string>
     <string name="anonymous_statistics_warning_title">Інформація про використання</string>
-    <string name="anonymous_statistics_warning">Анонімні звіти дозволяють розробникам CyanogenMod відслідковвувати встановлення на різні пристрої. Інформація, що відправляється включає в себе тип пристрою, версію прошивки і унікальний ідентифікатор, відправка якого ніяким способом не шкодить Вашій конфіденційності. Звіт відсилається при кожному завантаженні пристрою.\n\nДля перегляду даних, які відправляються, нитисніть \"Перегляд\".</string>
+    <string name="anonymous_statistics_warning">Анонімні звіти дозволяють розробникам Ganbarou відслідковвувати встановлення на різні пристрої. Інформація, що відправляється включає в себе тип пристрою, версію прошивки і унікальний ідентифікатор, відправка якого ніяким способом не шкодить Вашій конфіденційності. Звіт відсилається при кожному завантаженні пристрою.\n\nДля перегляду даних, які відправляються, нитисніть \"Перегляд\".</string>
     <string name="enable_reporting_title">Увімкнути відправку звітів</string>
     <string name="preview_data_title">Перегляд</string>
     <string name="view_stats_title">Статистика</string>
@@ -317,7 +317,7 @@
     <string name="power_menu_airplane_title">Режим польоту</string>
     <string name="power_menu_user_title">Переключенння користувачів</string>
     <string name="power_menu_sound_title">Звукова панель</string>
-    <string name="cmupdate_settings_title">Оновлення CyanogenMod</string>
+    <string name="cmupdate_settings_title">Оновлення Ganbarou</string>
     <string name="cmupdate_settings_summary">Перевірка та встановлення доступних оновлень</string>
     <string name="advanced_settings_title">Розширені налаштування</string>
     <string name="ime_switcher_notify">Вибір способу введення</string>
