Changelog V4.00 Initial: first build based on CM10.2. Feature: Ganbarou wallpaper Feature: Ganbarou bootanimation Feature: Ganbarou About screen (Ganbarou changelog, Ganbarou version, Ganbarou easter egg) Feature: Reboot and Recovery on top level of power menu
Change-Id: I5165ce46da5f38628fee078b1f02acdde5fce924

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -916,4 +916,17 @@
         <!-- Always allow app to send to premium SMS short code. -->
         <item>Always allow</item>
     </string-array>
+<!-- **** GANBAROU_PATCH_START **** -->
+    <!-- There is a setting to control the position of the navigation bar if tablet_ui is not active. -->
+    <string-array name="nav_pos_values" translatable="false">
+        <item>left</item>
+        <item>center</item>
+        <item>right</item>
+    </string-array>
+    <string-array name="nav_pos_retval" translatable="false">
+        <item>left</item>
+        <item>center</item>
+        <item>right</item>
+    </string-array>
+<!-- **** GANBAROU_PATCH_END **** -->
 </resources>
