--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -41,6 +41,7 @@
         </PreferenceScreen>
 
         <!-- CyanogenMod Updates -->
+<!-- **** GANBAROU_PATCH_START ****
         <PreferenceScreen android:key="cm_updates"
                 android:title="@string/cmupdate_settings_title" 
                 android:summary="@string/cmupdate_settings_summary">
@@ -48,14 +49,17 @@
                     android:targetPackage="com.cyanogenmod.updater"
                     android:targetClass="com.cyanogenmod.updater.UpdatesSettings" />
         </PreferenceScreen>
+**** GANBAROU_PATCH_END **** -->
 
         <!-- Anonymous statistics - (CMStats) -->
+<!-- **** GANBAROU_PATCH_START ****
         <PreferenceScreen
             android:key="cmstats"
             android:title="@string/anonymous_statistics_title"
             android:summary="@string/anonymous_statistics_summary"
             android:fragment="com.android.settings.cmstats.AnonymousStats" >
         </PreferenceScreen>
+**** GANBAROU_PATCH_END **** -->
 
         <!-- Change Log -->
         <PreferenceScreen android:key="changelog"
