--- a/res/xml/system_ui_settings.xml
+++ b/res/xml/system_ui_settings.xml
@@ -65,6 +65,17 @@
             android:fragment="com.android.settings.cyanogenmod.PieControl"
             android:title="@string/pie_control_title" />
 
-    </PreferenceCategory>
+<!-- **** GANBAROU_PATCH_START **** -->
+       <!-- Navigation bar position -->
+        <ListPreference
+            android:title="@string/nav_pos_dialog_title"
+            android:summary="@string/nav_pos_option_title"
+            android:key="nav_position"
+            android:entries="@array/nav_pos_values"
+            android:entryValues="@array/nav_pos_retval"
+            android:defaultValue="@string/nav_pos_default" />
+<!-- **** GANBAROU_PATCH_END **** -->
+
+      </PreferenceCategory>
 
 </PreferenceScreen>
