Feature Tablet: Navigation bar on right side of top bar in expanded desktop mode if enabled in Settings Feature Tablet: Brightness control by swiping on status bar enabled for tablets
Change-Id: I550f9fe2ed7df602860559f3b2debf4a0654617f

--- a/res/values/gan_strings.xml
+++ b/res/values/gan_strings.xml
@@ -23,5 +23,9 @@
     <string name="nav_pos_default">center</string>
     <!-- Navigation bar help title -->
     <string name="navigation_bar_help_title">Navigation bar help</string>
+    <!-- Enable navigation bar in status bar dialog title -->
+    <string name="status_bar_show_nav_title">Enable Navigation in status bar</string>
+    <!-- Enable navigation bar in status bar checkbox-->
+    <string name="status_bar_show_nav_summary">Only when extended desktop is active</string>
 <!-- **** GANBAROU_PATCH_END **** -->
 </resources>
