--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -66,6 +66,15 @@
             android:title="@string/status_bar_notif_count_title"
             android:summary="@string/status_bar_notif_count_summary"
             android:defaultValue="false" />
+
+<!-- **** GANBAROU_PATCH_START **** -->
+	<!-- Enable navigation bar in status bar -->
+	<com.android.settings.cyanogenmod.SystemSettingCheckBoxPreference
+            android:key="status_bar_show_nav"
+            android:title="@string/status_bar_show_nav_title"
+            android:summary="@string/status_bar_show_nav_summary"
+            android:defaultValue="false" />
+<!-- **** GANBAROU_PATCH_END **** -->
     </PreferenceCategory>
 
 </PreferenceScreen>
